Update for testing

--- a/backend/.choreo/endpoints.yaml
+++ b/backend/.choreo/endpoints.yaml
@@ -3,6 +3,6 @@ endpoints:
     - name: backend-endpoint
       port: 8080
       type: REST
-      networkVisibility: ""
+      networkVisibility: "Public"
       context: /
       schemaFilePath: ""
